--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<footer>
     		<ul>
-        		<li><a href="mailto:jakobbeach@gmail.com">email</a></li>
+			<li><h2>email</h2>jakobbeach(at)gmail(dot)com</li>
 			</ul>
 		</footer>
 	</body>
