--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<footer>
     		<ul>
-			<li><h2>email</h2>jakobbeach(at)gmail(dot)com</li>
+			<li><h2>email:</h2>jakobbeach(at)gmail(dot)com</li>
 			</ul>
 		</footer>
 	</body>
